--- a/angular.json
+++ b/angular.json
@@ -19,7 +19,9 @@
             "assets": [
               "src/_redirects",
               "src/assets",
-              "src/favicon.ico"
+              "src/favicon.ico",
+              "src/robots.txt",
+              "src/sitemap.xml"
             ],
             "styles": [
               "node_modules/perfect-scrollbar/css/perfect-scrollbar.css",
